--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.3.1",
     "classnames": "^2.2.6",
     "display-if": "^1.0.4",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "query-string": "^6.9.0",
     "react": "^16.11.0",
